--- a/nginx.conf
+++ b/nginx.conf
@@ -1,21 +1,22 @@
 upstream php-handler {
+    # Update php version as you need
     server unix:/run/php/php7.3-fpm.sock;
 }
 
 server {
     listen 80;
     listen [::]:80;
-    server_name cloud.koterba.sk www.cloud.koterba.sk;
+    server_name [CHANGEME] www.[CHANGEME];
     return 301 https://$server_name$request_uri;
 }
 
 server {
     listen 443 ssl http2;
     listen [::]:443 ssl http2;
-    server_name cloud.koterba.sk www.cloud.koterba.sk;
+    server_name [CHANGEME] www.[CHANGEME];
 
-    ssl_certificate /etc/letsencrypt/live/cloud.koterba.sk/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/cloud.koterba.sk/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/[CHANGEME]/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/[CHANGEME]/privkey.pem;
 
     add_header X-Content-Type-Options nosniff;
     add_header X-XSS-Protection "1; mode=block";
@@ -26,7 +27,8 @@ server {
     add_header Strict-Transport-Security "max-age=15552000";
     add_header Referrer-Policy "no-referrer";
 
-    root /var/www/html;
+    # For example /var/www/html
+    root [CHANGEME];
 
     location = /robots.txt {
         allow all;
