--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,6 @@
-upstream php-handler {
+upstream php-upstream {
     # Update php version as you need
-    server unix:/run/php/php7.3-fpm.sock;
+    server unix:/run/php/php7.4-fpm.sock;
 }
 
 server {
@@ -18,6 +18,9 @@ server {
     ssl_certificate /etc/letsencrypt/live/[CHANGEME]/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/[CHANGEME]/privkey.pem;
 
+    # For example /var/www/html
+    root [CHANGEME];
+
     add_header X-Content-Type-Options nosniff;
     add_header X-XSS-Protection "1; mode=block";
     add_header X-Robots-Tag none;
@@ -27,21 +30,7 @@ server {
     add_header Strict-Transport-Security "max-age=15552000";
     add_header Referrer-Policy "no-referrer";
 
-    # For example /var/www/html
-    root [CHANGEME];
-
-    location = /robots.txt {
-        allow all;
-        log_not_found off;
-        access_log off;
-    }
-
-    location = /.well-known/carddav {
-      return 301 $scheme://$host/remote.php/dav;
-    }
-    location = /.well-known/caldav {
-      return 301 $scheme://$host/remote.php/dav;
-    }
+    charset utf-8;
 
     client_max_body_size 512M;
     fastcgi_buffers 64 4K;
@@ -53,48 +42,22 @@ server {
     gzip_proxied expired no-cache no-store private no_last_modified no_etag auth;
     gzip_types application/atom+xml application/javascript application/json application/ld+json application/manifest+json application/rss+xml application/vnd.geo+json application/vnd.ms-fontobject application/x-font-ttf application/x-web-app-manifest+json application/xhtml+xml application/xml font/opentype image/bmp image/svg+xml image/x-icon text/cache-manifest text/css text/plain text/vcard text/vnd.rim.location.xloc text/vtt text/x-component text/x-cross-domain-policy;
 
+    error_page 404 /index.php;
+
     location / {
-        rewrite ^ /index.php$uri;
+        try_files $uri $uri/ /index.php?$query_string;
     }
 
-    location ~ ^/(?:build|tests|config|lib|3rdparty|templates|data)/ {
-        deny all;
-    }
-    location ~ ^/(?:\.|autotest|occ|issue|indie|db_|console) {
-        deny all;
-    }
+    location = /favicon.ico { access_log off; log_not_found off; }
+    location = /robots.txt  { access_log off; log_not_found off; }
 
-    location ~ ^/(?:index|remote|public|cron|core/ajax/update|status|ocs/v[12]|updater/.+|ocs-provider/.+)\.php(?:$|/) {
-        fastcgi_split_path_info ^(.+\.php)(/.*)$;
+    location ~ \.php$ {
+        fastcgi_pass php-upstream;
+        fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
         include fastcgi_params;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        fastcgi_param PATH_INFO $fastcgi_path_info;
-        fastcgi_param HTTPS on;
-        fastcgi_param modHeadersAvailable true;
-        fastcgi_param front_controller_active true;
-        fastcgi_pass php-handler;
-        fastcgi_intercept_errors on;
-        fastcgi_request_buffering off;
     }
 
-    location ~ ^/(?:updater|ocs-provider)(?:$|/) {
-        try_files $uri/ =404;
-        index index.php;
-    }
-
-    location ~ \.(?:css|js|woff|svg|gif)$ {
-        try_files $uri /index.php$uri$is_args$args;
-        add_header Cache-Control "public, max-age=15778463";
-        add_header X-Content-Type-Options nosniff;
-        add_header X-XSS-Protection "1; mode=block";
-        add_header X-Robots-Tag none;
-        add_header X-Download-Options noopen;
-        add_header X-Permitted-Cross-Domain-Policies none;
-        access_log off;
-    }
-
-    location ~ \.(?:png|html|ttf|ico|jpg|jpeg)$ {
-        try_files $uri /index.php$uri$is_args$args;
-        access_log off;
+    location ~ /\.(?!well-known).* {
+        deny all;
     }
 }
